# gmanim

./: .gitignore  Cargo.toml
src/: lib.rs
src/animation/: mod.rs
src/mobjects/: dot.rs  mod.rs  path.rs  polygon.rs  svg_shape.rs
src/video_backend/: ffmpeg.rs  mod.rs
