[package]
name = "gmanim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
rusttype = "*"
usvg = "0.47"
tiny-skia = "0.12"
fern = "*"
log = "*"
humantime = "*"
cfg-if = "1.0.0"
ffmpeg-next = "8.0"
yuv = { version = "0.8.11", features = ["fast_mode"] }

[features]
default = ["gmfloat_f32"]
gmfloat_f32 = []
gmfloat_f64 = []
gmfloat_f16 = []
